Topmonks.cz - Meet-us

--- a/www.topmonks.cz/src/stylesheets/main.scss
+++ b/www.topmonks.cz/src/stylesheets/main.scss
@@ -119,6 +119,9 @@ blockquote {
   text-align: center;
   opacity: 0.7;
 }
+.page_sub-title h2 {
+  text-transform: none;
+}
 
 .action-button {
   font-weight: 700;
