--- a/www.topmonks.com/src/stylesheets/meet-us.scss
+++ b/www.topmonks.com/src/stylesheets/meet-us.scss
@@ -97,7 +97,7 @@
   height: 100%;
   }
   .tm-events_text {
-    padding: 0.5em 1.5em;
+    padding: 0.5em 1.5em 0;
   }
   #gallery {
     display: none;
