změna černé barvy na stránkách TM.cz/com

--- a/www.topmonks.cz/src/stylesheets/case-studies-common.scss
+++ b/www.topmonks.cz/src/stylesheets/case-studies-common.scss
@@ -23,7 +23,7 @@
   text-align: center;
   padding: 0;
   width: 100%;
-  color: #000000;
+  color: #3C3C3B;
 }
 .tm-case-study__project-number {
   display: flex;
