--- a/www.topmonks.com/src/stylesheets/typography.scss
+++ b/www.topmonks.com/src/stylesheets/typography.scss
@@ -49,7 +49,7 @@ h2 {
   line-height: 1.143em; //32px
   text-transform: uppercase;
   text-align: center;
-  color: #000000;
+  color: #3C3C3B;
   margin-bottom: 18px;
   font-weight: 900;
 }
@@ -57,7 +57,7 @@ h3 {
   font-size: 1.5em; //24px
   line-height: 1.167em; //28px
   text-align: center;
-  color: #000000;
+  color: #3C3C3B;
   font-weight: 900;
 }
 h4 {
