--- a/caffe.topmonks.cz/src/html/layouts/application.html
+++ b/caffe.topmonks.cz/src/html/layouts/application.html
@@ -12,9 +12,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 
   <!-- Custom Fonts -->
-  <script>WebFontConfig = { google: { families: ["Lato:400,700:latin-ext"] }, async: true }</script>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" async defer integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM"
-    crossorigin="anonymous"></script>
+  <script>WebFontConfig = { typekit: {id: 'her1ktw'}, async: true }</script>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" async defer
+          integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM"
+          crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="https://unpkg.com/material-components-web@v0.35.0/dist/material-components-web.min.css">
   <link rel="stylesheet" href="/stylesheets/typography.css">
