--- a/caffe.topmonks.cz/src/stylesheets/typography.scss
+++ b/caffe.topmonks.cz/src/stylesheets/typography.scss
@@ -15,7 +15,8 @@ body {
   padding: 0;
   margin: 0 auto;
   max-width: 100%;
-  font-family: Lato, sans-serif, Roboto, Arial;
+  font-family: -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", Helvetica,
+  Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";  font-weight: normal;
   -webkit-font-kerning: normal;
   font-kerning: normal;
   font-variant-numeric: lining-nums slashed-zero;
