--- a/studio.topmonks.com/src/stylesheets/main.scss
+++ b/studio.topmonks.com/src/stylesheets/main.scss
@@ -4,7 +4,6 @@
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
   --mdc-layout-grid-column-width-desktop: 60px;
-
   --tm-primary: #ff7a7e;
   --tm-primary-dark: #ff6165;
   --tm-primary-light: #ff9497;
@@ -12,6 +11,7 @@
   --tm-secondary-dark: #5558fa;
   --tm-secondary-light: #8788fc;
   --tm-grey: #9b9b9b;
+  --tm-grey-light: #dbdbdb;
   --tm-article-background: #f8fbfc;
   --tm-black: #4a4a4a;
 }
@@ -59,39 +59,70 @@ section:target {
   text-align: center;
 }
 
-.button {
-  margin: 0 auto;
-}
-
 .white-box {
   background-color: #ffffff;
   padding: 0 24px;
 }
 
 .pink-title {
-  background-color: #ff7a7e;
+  background-color: var(--tm-primary);
   max-width: 100%;
 }
-
-.button_transparent a:hover {
-  background-color: transparent;
-  border: 3px solid #ff7a7e;
-  color: #ff7a7e;
+button {
+  cursor: pointer;
 }
-
+.button {
+  font-size: 1em;
+  border-radius: 32px;
+  padding: 12px 54px;
+  font-weight: 700;
+  margin: 1em auto 0;
+  color: #ffffff;
+  border: 3px solid var(--tm-primary);
+  background-color: var(--tm-primary);
+  transition: all 0.2s ease-in-out;
+  text-transform: uppercase;
+  &:hover {
+    background-color: #ffffff;
+    color: var(--tm-primary);
+  }
+  &.button--inverse {
+    background-color: #ffffff;
+    border-color: #ffffff;
+    color: var(--tm-primary);
+    &:hover{
+      color: #ffffff;
+      background-color: var(--tm-primary);
+      border-color: #ffffff;
+    }
+  }
+  &.button--mail {
+    width: 200px;
+    padding: 11px 24px;
+    border: 2px solid var(--tm-primary);
+    color: #ff7a7e;
+    background: transparent;
+    -webkit-appearance: none;
+    margin-top: 0;
+    &:hover {
+      color: #ffffff;
+      background-color: #ff7a7e;
+    }
+  }
+  &.button-fullwidth {
+    width: 100%;
+  }
+}
 /*Main Info*/
 .opening {
-  margin-top: 8em;
+  margin: 8em auto 0;
   text-align: center;
+  max-width: 600px;
   p {
     color: #4f4f4f;
-    max-width: 600px;
-    margin: 0 auto;
-  }
-  .button {
-    margin: 1em 0 5em;
   }
   .avatar {
+    margin-top: 5em;
     background: url("/images/avatar_bg.svg") center no-repeat;
     background-size: 100%;
   }
@@ -111,33 +142,14 @@ section:target {
   }
   input[type="email"] {
     -webkit-appearance: none;
-    width: 200px;
-    background-color: #ffffff;
-    padding: 12px 24px;
-    border-radius: 32px;
-    border: 1px solid #dbdbdb;
-    color: #b0b0b0;
-    font-size: 18px;
-    &:focus {
-      padding: 10px 22px;
-      border: 3px solid #555;
-    }
-  }
-
-  .mail-button {
-    width: 200px;
     padding: 11px 24px;
     border-radius: 32px;
-    border: 2px solid #ff7a7e;
-    text-align: center;
-    color: #ff7a7e;
-    background: transparent;
-    font-size: 18px;
-    font-weight: 700;
-    -webkit-appearance: none;
-    &:hover {
-      color: #ffffff;
-      background-color: #ff7a7e;
+    width: 200px;
+    border: 1px solid var(--tm-grey-light);
+    color: #b0b0b0;
+    &:focus {
+      padding: 10px 23px;
+      border: 2px solid var(--tm-primary);
     }
   }
 }
@@ -395,10 +407,14 @@ section:target {
 
 /*Contact*/
 #contacts {
+  .tm-layout-wrapper{
+    --mdc-layout-grid-margin-phone: 16px;
+    --mdc-layout-grid-margin-tablet: 16px;
+  }
   text-align: center;
   padding: 2em 0;
   .mailto {
-    margin-bottom: 1em;
+    margin: 1em 0;
     a {
       color: #ffffff;
       font-size: 18px;
@@ -733,12 +749,6 @@ blockquote {
   }
 }
 
-@media (min-width: 320px) {
-  .mail form input[type="email"] {
-    padding: 12px 60px 12px 24px;
-  }
-}
-
 @media (max-width: 320px) {
   #network .white-box {
     min-height: 488px;
@@ -747,3 +757,41 @@ blockquote {
     padding: 12px 48px;
   }
 }
+.tm-form {
+  margin: 0 auto;
+  @media screen and (min-width: 480px) {
+    max-width: 610px;
+  }
+}
+.tm-form-control{
+  text-align: left;
+  position: relative;
+  margin-bottom: 1.5em;
+  box-sizing: border-box;
+}
+.tm-form-control__label {
+  position: absolute;
+  top: 17px;
+  left: 28px;
+  line-height: 1;
+  transition: all 0.2s ease-in-out;
+  color: var(--tm-grey);
+}
+.tm-form-control__field.has-value + .tm-form-control__label,
+.tm-form-control__field:focus + .tm-form-control__label {
+  top:5px;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+.tm-form-control__field {
+  padding: 24px 26px 10px;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+  border: 2px solid transparent;
+  width: 100%;
+  box-sizing: border-box;
+  &:invalid {
+    border-color: var(--tm-primary);
+  }
+}
+
+
