--- a/studio.topmonks.com/src/stylesheets/typography.scss
+++ b/studio.topmonks.com/src/stylesheets/typography.scss
@@ -20,6 +20,15 @@ body {
   font-weight: 400;
 }
 
+ul {
+  padding: 0;
+
+}
+ul li {
+  list-style: none;
+  margin: 0;
+}
+
 .wf-active body {
   font-family: Lato, sans-serif;
 }
