--- a/blockchain.topmonks.com/src/stylesheets/main.scss
+++ b/blockchain.topmonks.com/src/stylesheets/main.scss
@@ -231,18 +231,15 @@ a.button:hover {
   }
   .tm-case-study {
     text-align: center;
-    margin-top: 2em;
+    margin: 2em 0;
     background-color: #fbfbfb;
     border-bottom: 4px solid #8363f9;
-    padding: 3em 0;
+    padding: 3em 1em 1.5em;
 
     cite {
       display: block;
       font-style: normal;
       font-size: 18px;
-    }
-    blockquote {
-      margin: auto 1.5em;
     }
   }
   .tm-case-study__author {
