--- a/monkstage.topmonks.com/src/stylesheets/main.scss
+++ b/monkstage.topmonks.com/src/stylesheets/main.scss
@@ -1,7 +1,18 @@
-@import "../../../../node_modules/@material/layout-grid/mdc-layout-grid";
-@import "common/colors";
+@import "@material/layout-grid/mdc-layout-grid";
 :root {
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
-  --mdc-layout-grid-column-width-desktop: 60px;
+  --mdc-layout-grid-column-width-desktop: 90px;
+}
+
+/* LAYOUT HELPER CLASSES */
+.tm-layout-wrapper {
+  max-width: 1300px;
+  margin: 0 auto;
+}
+.tm-layout--display-flex {
+  display: flex;
+}
+.tm-layout--display-block{
+  display: block;
 }
