--- a/monkstage.topmonks.com/src/stylesheets/typography.scss
+++ b/monkstage.topmonks.com/src/stylesheets/typography.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Varela+Round');
 :root {
   --tm-primary_text: #3C3C3B;
+  --tm-secondary_text: #6A7B8C;
   --tm-primary: #B46AF2;
   --tm-secondary: rgba(180, 106, 242, 0.1)
 }
@@ -41,8 +42,8 @@ h5 {
   font-weight: normal;
 }
 h1 {
-  margin-top: 1em;
-  margin-bottom: 2em;
+  font-size: 3em;
+  margin-bottom: 0;
 }
 
 h2 {
@@ -84,6 +85,9 @@ ul {
 }
 /* desktop */
 @media (min-width: 840px) {
+  h1 {
+    font-size: 6em;
+  }
   h2 {
     font-size: 3.111em; // 56px
   }
@@ -96,4 +100,9 @@ ul {
 }
 .tm-text--subtext {
   font-size: 0.7em;
+}
+.tm-text__h1-subtitle {
+  display: block;
+  color: var(--tm-primary);
+  font-size: 0.5em;
 }
