--- a/monkstage.topmonks.com/src/stylesheets/typography.scss
+++ b/monkstage.topmonks.com/src/stylesheets/typography.scss
@@ -3,7 +3,7 @@
   --tm-primary_text: #3C3C3B;
   --tm-secondary_text: #6A7B8C;
   --tm-primary: #B46AF2;
-  --tm-secondary: rgba(180, 106, 242, 0.1)
+  --tm-secondary: #f7f0fe;
 }
 body {
   font-size: 16px;
