--- a/monkstage.topmonks.com/src/stylesheets/typography.scss
+++ b/monkstage.topmonks.com/src/stylesheets/typography.scss
@@ -99,7 +99,8 @@ ul {
   text-align: center;
 }
 .tm-text--subtext {
-  font-size: 0.7em;
+  font-size: 0.875em;
+  color: var(--tm-secondary_text);
 }
 .tm-text__h1-subtitle {
   display: block;
