testimonials and meadia sections

--- a/monkstage.topmonks.com/src/html/layouts/index.html
+++ b/monkstage.topmonks.com/src/html/layouts/index.html
@@ -24,7 +24,7 @@
 {% block javascript %}
 {% endblock %}
 
-<footer>
+<footer class="tm-footer tm-layout--margin-top">
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -56,22 +56,21 @@
         </svg>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-        <h3>About us</h3>
-        <p>We are your software development partners, experienced with both startup and corporate environment.</p>
-        <p>If you like these ideas, come and join us, and have your project delivered by us. Or simply visit us. We enjoy meeting interesting people.</p>
+        <h3>O nás</h3>
+        <p>Jsme vývojáři softwaru pro váš byznys se zkušenostmi jak se startupy, tak s korporátním prostředím.</p>
+        <p>Pokud se ti líbí naše myšlení, přijď a přidej se k nám a dej nám vědět, jak ti můžeme pomoci s tvým projektem nebo nás jednoduše přijď navštívit. Rádi potkáváme nové a zajímavé lidi.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-        <h3>Important contacts</h3>
+        <h3>Důležité kontakty</h3>
         <p>Veronika Tomášová / Organization  & Tickets<br/>
-          <a href="mailto:veronika.tomasova@topmonks.com" class="tm-text--subtext">veronika.tomasova@topmonks.com</a></p>
+          <span class="tm-text--subtext"><a href="mailto:veronika.tomasova@topmonks.com">veronika.tomasova@topmonks.com</a></span></p>
         <p>Simona Zábržová / Media<br/>
-          <a href="mailto:simona.zabrzova@topmonks.com" class="tm-text--subtext">simona.zabrzova@topmonks.com</a></p>
+          <span class="tm-text--subtext"><a href="mailto:simona.zabrzova@topmonks.com">simona.zabrzova@topmonks.com</a></span></p>
         <p>Jirka Pénzeš / Speakers and venue<br/>
-          <a href="mailto:jiri.penzes@topmonks.com" class="tm-text--subtext">jiri.penzes@topmonks.com</a></p>
+          <span class="tm-text--subtext"><a href="mailto:jiri.penzes@topmonks.com">jiri.penzes@topmonks.com</a></span></p>
       </div>
     </div>
   </div>
-
 </footer>
 </body>
 </html>
