minor layout fixes

--- a/monkstage.topmonks.com/src/stylesheets/main.scss
+++ b/monkstage.topmonks.com/src/stylesheets/main.scss
@@ -60,7 +60,7 @@ section,
 }
 .tm-hero {
   background: transparent url("../images/bgnd_hero.svg") no-repeat;
-  background-position: bottom 20px right calc(50% - 500px);
+  background-position: bottom 0 right calc(50% - 500px);
   padding-bottom: 2em;
 }
 .tm-strip {
