--- a/monkstage.topmonks.com/src/html/layouts/index.html
+++ b/monkstage.topmonks.com/src/html/layouts/index.html
@@ -60,7 +60,7 @@
         <p>Jsme vývojáři softwaru pro váš byznys se zkušenostmi jak se startupy, tak s korporátním prostředím.</p>
         <p>Pokud se ti líbí naše myšlení, přijď a přidej se k nám a dej nám vědět, jak ti můžeme pomoci s tvým projektem nebo nás jednoduše přijď navštívit. Rádi potkáváme nové a zajímavé lidi.</p>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+      <div id="kontakty" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
         <h3>Důležité kontakty</h3>
         <p>Veronika Tomášová / Organization  & Tickets<br/>
           <span class="tm-text--subtext"><a href="mailto:veronika.tomasova@topmonks.com">veronika.tomasova@topmonks.com</a></span></p>
