--- a/monkstage.topmonks.com/src/stylesheets/header.scss
+++ b/monkstage.topmonks.com/src/stylesheets/header.scss
@@ -106,6 +106,7 @@
         color: var(--tm-primary);
         background-color: var(--tm-secondary);
         display: inline;
+        margin-left: 1.5em;
       }
     }
   }
