--- a/monkstage.topmonks.com/src/stylesheets/main.scss
+++ b/monkstage.topmonks.com/src/stylesheets/main.scss
@@ -61,7 +61,6 @@ section,
 .tm-hero {
   background: transparent url("../images/bgnd_hero.svg") no-repeat;
   background-position: bottom 0 right calc(50% - 500px);
-  padding-bottom: 2em;
 }
 .tm-strip {
   background: #FFFFFF no-repeat;
@@ -132,6 +131,9 @@ section,
     width: 64px;
   }
 }
+#o-akci {
+  padding-top: 2em;
+}
 .tm-section {
   padding: 1.5em 2em;
 }
@@ -149,3 +151,4 @@ section,
     width: 300px;
   }
 }
+
