footer text updates

--- a/monkstage.topmonks.com/src/html/layouts/index.html
+++ b/monkstage.topmonks.com/src/html/layouts/index.html
@@ -58,8 +58,8 @@
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
         <h3>O nás</h3>
-        <p>Jsme vývojáři softwaru pro váš byznys se zkušenostmi jak se startupy, tak s korporátním prostředím.</p>
-        <p>Pokud se ti líbí naše myšlení, přijď a přidej se k nám a dej nám vědět, jak ti můžeme pomoci s tvým projektem nebo nás jednoduše přijď navštívit. Rádi potkáváme nové a zajímavé lidi.</p>
+        <p><a href="https://www.topmonks.cz/" title="web TopMonks">TopMonks</a> je český softwarehouse založený v roce 2011, zkušený s dodáváním komplexních řešení nejen B2B klientům, ale i startupům. Začátkem roku 2018 toto portfolio doplnila nová část firmy, celá dedikovaná technologii blockchain a kryptoaktivům.</p>
+        <p><a href="https://blockchain.topmonks.com/" title="web TopMonks Blockchain">TopMonks Blockchain</a> zastřešuje širokou paletu služeb na míru, od designu a vývoje aplikací, přes bezpečností audity, až po konzultace a případové studie použití blockchainu v businessu.</p>
       </div>
       <div id="kontakty" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
         <h3>Důležité kontakty</h3>
@@ -67,8 +67,8 @@
           <span class="tm-text--subtext"><a href="mailto:veronika.tomasova@topmonks.com">veronika.tomasova@topmonks.com</a></span></p>
         <p>Simona Zábržová / Media<br/>
           <span class="tm-text--subtext"><a href="mailto:simona.zabrzova@topmonks.com">simona.zabrzova@topmonks.com</a></span></p>
-        <p>Jirka Pénzeš / Speakers and venue<br/>
-          <span class="tm-text--subtext"><a href="mailto:jiri.penzes@topmonks.com">jiri.penzes@topmonks.com</a></span></p>
+        <p>Lea Petrášová / Organization and Speakers<br/>
+          <span class="tm-text--subtext"><a href="mailto:lea.petrasova@topmonks.com">lea.petrasova@topmonks.com</a></span></p>
       </div>
     </div>
   </div>
